src/objects/Timesheets_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <fields>
        <fullName>Hours_per_short_day__c</fullName>
        <defaultValue>7</defaultValue>
        <inlineHelpText>Hours for Friday</inlineHelpText>
        <label>Hours per short day</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_per_standard_day__c</fullName>
        <defaultValue>7.5</defaultValue>
        <inlineHelpText>Hours for Monday to Thursday</inlineHelpText>
        <label>Hours per standard day</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Standard_hours_per_week__c</fullName>
        <defaultValue>37</defaultValue>
        <label>Standard hours per week</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Timesheets Settings</label>
</CustomObject>